force-app/main/default/objects/Employer__c/fields/Last_Performance_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Performance_Review_Date__c</fullName>
    <label>Last Performance Review Date</label>
    <type>Date</type>
</CustomField>