force-app/main/default/objects/Employer__c/fields/LinkedIn_Url__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Url__c</fullName>
    <label>LinkedIn Url</label>
    <type>Url</type>
</CustomField>