force-app/main/default/objects/Employer__c/fields/Next_Performance_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Performance_Review_Date__c</fullName>
    <label>Next Performance Review Date</label>
    <type>Date</type>
</CustomField>