force-app/main/default/objects/Employer__c/fields/Technical_Level__c.field-meta.xml
<CustomField>
    <fullName>Technical_Level__c</fullName>
    <label>Technical Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>P5</fullName>
            </value>
            <value>
                <fullName>P6</fullName>
            </value>
            <value>
                <fullName>P7</fullName>
            </value>
            <value>
                <fullName>P8</fullName>
            </value>
            <value>
                <fullName>P9</fullName>
            </value>
            <value>
                <fullName>P10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>